fixed get image
